--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,11 @@ dependencies:
   flutter_bloc: ^6.1.1
   equatable: ^1.2.0
   http: ^0.12.2
-  multi_type_list_view: ^0.1.0
+  shimmer: ^1.1.2
+  flutter_statusbarcolor: ^0.2.3
+  cached_network_image: ^2.4.1
   transparent_image: ^1.0.0
+  intl: ^0.16.1
   flutter:
     sdk: flutter
 
